# tutor-theme-veneactiva

./: .flake8  .hatch_build.py  Makefile  pyproject.toml
veneactiva-theme/: plugin.py
veneactiva-theme/patches/: mfe-env-config-buildtime-definitions
veneactiva-theme/templates/veneactiva-theme/cms/static/sass/partials/cms/theme/: _variables.scss
veneactiva-theme/templates/veneactiva-theme/lms/static/js/: dark-theme.js
veneactiva-theme/templates/veneactiva-theme/lms/static/sass/extra/: _header.scss
veneactiva-theme/templates/veneactiva-theme/lms/static/sass/partials/lms/theme/: _variables.scss
veneactiva-theme/templates/veneactiva-theme/lms/templates/: footer.html  index_overlay.html
veneactiva-theme/templates/veneactiva-theme/tasks/: init.sh
