#https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-theme-veneactiva"
description = "Veneactiva theme plugin for Tutor"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "AGPLv3" }
requires-python = ">=3.9"
authors = [{ name = "lunaesteban" }, { email = "el@lunaesteban.com" }]
maintainers = [
    { name = "Esteban Luna" }, { email = "el@lunaesteban.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["tutor-mfe>=19.0.0,<20.0.0", "tutor>=19.0.0,<20.0.0"]

# hatch_build.py will set it later
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=19.0.0,<20.0.0",
  "pylint",
  "black"
]

[project.entry-points."tutor.plugin.v1"]
veneactiva-theme = "veneactiva-theme.plugin"

[project.urls]
Code = "https://github.com/lunaesteban/tutor-theme-veneactiva"
Community = "https://discuss.openedx.org"
Documentation = "https://docs.tutor.edly.io/"
Homepage = "https://github.com/lunaesteban/tutor-theme-veneactiva"
Issues = "https://github.com/lunaesteban/tutor-theme-veneactiva/issues"

# hatch related configurations
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = ["/veneactiva-theme", ".hatch_build.py"]
exclude = ["tests*"]

# we need this becuase our project escapes default hatch file selection.
# see https://hatch.pypa.io/latest/plugins/builder/wheel/#default-file-selection
[tool.hatch.build.targets.wheel]
packages = ["/veneactiva-theme"]

[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"
